--- a/Console-plane/login.html
+++ b/Console-plane/login.html
@@ -36,7 +36,7 @@
             <div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">登录</a></li>
-                    <li><a href="/info.html">关于影岚</a></li>
+                    <li><a href="/toinfo.html">关于影岚</a></li>
                 </ul>
             </div>
         </div>
